--- a/index.html
+++ b/index.html
@@ -1,55 +1,66 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="kls.css">
-    <script src="https://kit.fontawesome.com/f08ad66076.js" crossorigin="anonymous"></script>
-    <title>Movies Booking</title>
-</head>
-<body>
-<h1 ><i>My Stream</i></h1>
-<form>
-    <fieldset class="form">
-        <div>
-            Name : <br>
-        <input type="text" class="box" placeholder="Name"><br>
-        Mobile : <br>
-        <input type="text" class="num" maxlength="13" value="+91"><br>
-        <label for="movies">
-            Movies :
-        </label><br>
-        <select name="movies" class="box">
-            <option value="">-Select-</option>
-            <option value="fighter">Fighter</option>
-            <option value="salaar">Salaar</option>
-            <option value="guntur kaaram">Guntur Karam</option>
-            <option value="hanuman">Hanu-man</option>
-        </select><br>
-        Seat category :
-        <select class="box">
-            <option value="">-Select-</option>
-            <option value="Premium">Premium</option>
-            <option value="Gold">Gold</option>
-            <option value="Silver">Silver</option>
-            <option value="General">General</option>
-        </select><br>
-        <label for="date">Choose a date:</label><br>
-        <input type="date" name="date" class="box"><br>
-        <label for="theater">
-            Theaters :
-        </label><br>
-        <select name="theaters" class="box">
-            <option value="">-Select-</option>
-            <option value="inox">Inox</option>
-            <option value="kameswari">Kameswari</option>
-            <option value="sangam">Sangam</option>
-            <option value="melody">Melody</option>
-        </select><br>
-            <a href="btr.html"><button type="button" class="btn">Submit</button></a>
-        </div>
-    </fieldset>
-</form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="kls.css">
+        <script src="https://kit.fontawesome.com/f08ad66076.js" crossorigin="anonymous"></script>
+        <title>Movies Booking</title>
+    </head>
+    <body>
+        <h1 >
+            <i>
+                <i class="fa-solid fa-film fa-sm" style="color: #e4ffff;"></i>
+                My Stream
+                <i class="fa-solid fa-clapperboard fa-sm" style="color: #e4ffff;"></i>
+            </i>
+        </h1>
+        <br>
+        <form>
+            <fieldset class="form">
+                <div>
+                    Name :
+                    <br>
+                    <input type="text" class="box" placeholder="Name"><br>
+                    Mobile :
+                    <br>
+                    <input type="text" class="num" maxlength="13" value="+91"><br>
+                    <label for="movies">
+                        Movies :
+                    </label><br>
+                    <select name="movies" class="box">
+                        <option value="">-Select-</option>
+                        <option value="fighter">Fighter</option>
+                        <option value="salaar">Salaar</option>
+                        <option value="guntur kaaram">Guntur Karam</option>
+                        <option value="hanuman">Hanu-man</option>
+                    </select><br>
+                    Seat category :
+                    <select class="box">
+                        <option value="">-Select-</option>
+                        <option value="Premium">Premium</option>
+                        <option value="Gold">Gold</option>
+                        <option value="Silver">Silver</option>
+                        <option value="General">General</option>
+                    </select><br>
+                    <label for="date">Choose a date:</label><br>
+                    <input type="date" name="date" class="box"><br>
+                    <label for="theater">
+                        Theaters :
+                    </label><br>
+                    <select name="theaters" class="box">
+                        <option value="">-Select-</option>
+                        <option value="inox">Inox</option>
+                        <option value="kameswari">Kameswari</option>
+                        <option value="sangam">Sangam</option>
+                        <option value="melody">Melody</option>
+                    </select><br>
+                    <a href="btr.html">
+                        <button type="button" class="btn">Submit</button>
+                    </a>
+                </div>
+            </fieldset>
+        </form>
+    </body>
 </html>
