--- a/btr.html
+++ b/btr.html
@@ -10,71 +10,74 @@
     </head>
     <body>
         <h1>
-            <i>Shows Avaliable</i>
+            <i>
+                <i class="fa-solid fa-film fa-sm" style="color: #e4ffff;"></i>
+                Shows Avaliable
+            </i>
         </h1>
         <marquee behavior="text" direction="right">************NOW STREAMING MOVIES**************</marquee>
         <div class="container">
-              <img src="1.jpg" >
-              <img src="2.jpg" >
-              <img src="4.jpg">
-              <img src="3.jpeg">
+            <img src="1.jpg">
+            <img src="2.jpg">
+            <img src="4.jpg">
+            <img src="3.jpeg">
         </div>
         <section>
-          <div class="table-box">
-            <table border="2">
-              <tr>
-                <th>S.NO</th>
-                <th>MOVIES</th>
-                <th>TIMINGS</th>
-                <th>SECOND SHOW</th>
-                <th>SCREEN NO</th>
-              </tr>
-              <tr>
-                <td rowspan="2">1</td>
-                <td rowspan="2">FIGHTER</td>
-                <td>2:00 Pm</td>
-                <td rowspan="2">9:30 Pm - SCREEN 3</td>
-                <td>SCREEN 1</td>
-              </tr>
-              <tr>
-                <td>5:30 Pm</td>
-                <td>SCREEN 2</td>
-              </tr>
-              <tr>
-                <td rowspan="2">2</td>
-                <td rowspan="2">SALAAR</td>
-                <td>2:00 Pm</td>
-                <td rowspan="2">9:00 Pm - SCREEN 1</td>
-                <td>SCREEN 3</td>
-              </tr>
-              <tr>
-                <td>2:00 Pm</td>
-                <td>SCREEN 4</td>
-              </tr>
-              <tr>
-                <td rowspan="2">3</td>
-                <td rowspan="2">HANU-MAN</td>
-                <td>5:30 Pm</td>
-                <td rowspan="2">9:30 Pm - SCREEN 4</td>
-                <td>SCREEN 1</td>
-              </tr>
-              <tr>
-                <td>6:00 Pm</td>
-                <td>SCREEN 4</td>
-              </tr>
-              <tr>
-                <td rowspan="2">4</td>
-                <td rowspan="2">Guntur Karam</td>
-                <td>6:00 Pm</td>
-                <td rowspan="2">9:00 Pm - SCREEN 2</td>
-                <td>SCREEN 3</td>
-              </tr>
-              <tr>
-                <td>2:00 Pm</td>
-                <td>SCREEN 2</td>
-              </tr>
-            </table>
-          </div>
+            <div class="table-box">
+                <table border="2">
+                    <tr>
+                        <th>S.NO</th>
+                        <th>MOVIES</th>
+                        <th>TIMINGS</th>
+                        <th>SECOND SHOW</th>
+                        <th>SCREEN NO</th>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">1</td>
+                        <td rowspan="2">FIGHTER</td>
+                        <td>2:00 Pm</td>
+                        <td rowspan="2">9:30 Pm - SCREEN 3</td>
+                        <td>SCREEN 1</td>
+                    </tr>
+                    <tr>
+                        <td>5:30 Pm</td>
+                        <td>SCREEN 2</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">2</td>
+                        <td rowspan="2">SALAAR</td>
+                        <td>2:00 Pm</td>
+                        <td rowspan="2">9:00 Pm - SCREEN 1</td>
+                        <td>SCREEN 3</td>
+                    </tr>
+                    <tr>
+                        <td>2:00 Pm</td>
+                        <td>SCREEN 4</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">3</td>
+                        <td rowspan="2">HANU-MAN</td>
+                        <td>5:30 Pm</td>
+                        <td rowspan="2">9:30 Pm - SCREEN 4</td>
+                        <td>SCREEN 1</td>
+                    </tr>
+                    <tr>
+                        <td>6:00 Pm</td>
+                        <td>SCREEN 4</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">4</td>
+                        <td rowspan="2">Guntur Karam</td>
+                        <td>6:00 Pm</td>
+                        <td rowspan="2">9:00 Pm - SCREEN 2</td>
+                        <td>SCREEN 3</td>
+                    </tr>
+                    <tr>
+                        <td>2:00 Pm</td>
+                        <td>SCREEN 2</td>
+                    </tr>
+                </table>
+            </div>
         </section>
         <p>
             DICSLAIMER : Please note that once your movie ticket has been purchased, it
@@ -89,12 +92,12 @@
         </p>
         <br>
         <center>
-          <a href="index.html">
-            <button type="button" class="btn">Back</button>
-          </a>
-          <a href="btr.html">
-            <button type="button" class="btn">Top</button>
-          </a>
+            <a href="index.html">
+                <button type="button" class="btn">Back</button>
+            </a>
+            <a href="btr.html">
+                <button type="button" class="btn">Top</button>
+            </a>
         </center>
     </body>
 </html>
